fix vertical alignments

--- a/simplq/src/styles/adminPage.module.scss
+++ b/simplq/src/styles/adminPage.module.scss
@@ -32,9 +32,15 @@
   display: flex;
   justify-content: space-between;
   & > div {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    padding: 0;
+  div {
     padding: 0;
   }
   button {
-    margin: 0 .25rem;
+    margin: 0 1rem;
+  }
   }
 }
